fixed font and sizing issues on small screens

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,7 +2,7 @@ html, body {
     background-color: #1E1E1E;
     color: #C9D4D4;    
     font-size: 10.5pt;
-    font-family: Consolas;
+    font-family: "Segoe WPC", "Segoe UI", "Open Sans";
     height: 100%;
     padding: 0px;
     margin: 0px;
@@ -111,7 +111,7 @@ li.current {
     list-style-type: none;
     padding-left: 15px;
     font-size: 13px;
-    font-family: "Segoe WPC", "Segoe UI";
+    font-family: "Segoe WPC", "Segoe UI", "Open Sans";
 }
 
 .left-menu li {
@@ -164,11 +164,12 @@ li.current {
 
 .main-path {
     position: relative;
-    height: 20px;
-    font-family: "Segoe WPC", "Segoe UI";
+    height: auto;   
+    font-family: "Segoe WPC", "Segoe UI", "Open Sans";
     font-size: 13px;
     line-height: 20px;
     padding-left: 10px;
+    padding-right: 50px;
     margin-top: 35px;
     background-color: #1E1E1E;
     border-bottom: #111111 2px solid;
@@ -185,6 +186,8 @@ li.current {
     .main-path { 
         position: fixed;
         overflow-x: unset;
+        padding-right: unset;
+        height: 20px;
     } 
 }
 
@@ -196,7 +199,7 @@ li.current {
     width: 100%;
     height: 35px;
     background-color: #1E1E1E;
-    font-family: "Segoe WPC", "Segoe UI";
+    font-family: "Segoe WPC", "Segoe UI", "Open Sans";
     font-size: 13px;
     padding-left: 0px;  
     box-sizing: border-box;
@@ -247,20 +250,31 @@ li.current {
     display: table-row;
 }
 
+img {
+    max-width: 100%;
+}
+
 .main-tab {
     display: none;
     padding-left: 20px;
-    padding-right: 40px;
+    padding-right: 50px;
     background-color: #2D2D2D;
     line-height: 35px;
-    white-space: nowrap;
+    /*white-space: nowrap;*/
     border-right: 1px #252526 solid;
     border-left: 1px #252526 solid;
+    overflow-x: hidden;
+    max-width: 100%;
 }
 
 @media screen and (min-width: 800px) { 
     .main-tab {
         display: table-cell;
+        padding-right: 40px;
+        overflow-x: unset;
+        white-space: nowrap;
+        overflow-x: unset;
+        max-width: unset;
     } 
 }
 
@@ -296,13 +310,14 @@ li.current {
 
 .main-content {
     display: none;
-    font-family: Consolas, "Courier New", monospace;;
+    font-family: "Consolas", "Courier New", "monospace";
     width: 100%;
     height: 100%;
     line-height: 19px;
     padding-top: 5px;
     padding-right: 20px;
     padding-bottom: 20px;
+    word-break: break-word;
 }
 
 @media screen and (min-width: 800px) { 
@@ -420,13 +435,14 @@ li.current {
     padding: 10px;
     border-radius: 3px;  
     background-color: #1e1e1e;
+    font-family: "Consolas", "Courier New", "monospace";
 }
 
 /* Preview */
 
 .main-content-preview {
     display: block;
-    font-family: "Segoe UI","Segoe WPC";
+    font-family: "Segoe WPC", "Segoe UI", "Open Sans";
     color: #C9D4D4;
     width: 100%;
     height: 100%;
@@ -435,6 +451,7 @@ li.current {
     padding-bottom: 20px;
     padding-left: 10px;
     padding-right: 10px;
+    word-break: break-word;
 }
 
 
@@ -599,7 +616,7 @@ code[class|='language']::before {
     display: none;
     position: absolute;
     right: 50px;
-    font-family: "Segoe WPC", "Segoe UI";
+    font-family: "Segoe WPC", "Segoe UI", "Open Sans";
     font-size: 13px;
     margin: 1px;
     margin-top: 5px;
@@ -615,7 +632,7 @@ code[class|='language']::before {
     color: #777777;
     content: "</>";
     font-size: 10px;
-    font-family: "Consolas", "Courier New", monospace;
+    font-family: "Consolas", "Courier New", "monospace";
     width: 20px;
     height: 16px;
     margin-right: 5px;
@@ -681,7 +698,7 @@ code[class|='language']::before {
     border-right: 1px #777777 solid;
     font-size: 14px;
     line-height: 20px;
-    font-family: "Consolas", "Courier New", monospace;
+    font-family: "Consolas", "Courier New", "monospace";
     content: " ";
 }
 
